20080721
 - (djm) OpenBSD CVS Sync
   - jmc@cvs.openbsd.org 2008/07/18 22:51:01
     [sftp-server.8]
     no need for .Pp before or after .Sh;
   - djm@cvs.openbsd.org 2008/07/21 08:19:07
     [version.h]
     openssh-5.1
 - (djm) [README contrib/caldera/openssh.spec contrib/redhat/openssh.spec]
   [contrib/suse/openssh.spec] Update version number in README and RPM specs
 - (djm) Release OpenSSH-5.1

20080717
 - (djm) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2008/07/17 08:48:00
     [sshconnect2.c]
     strnvis preauth banner; pointed out by mpf@ ok markus@
   - djm@cvs.openbsd.org 2008/07/17 08:51:07
     [auth2-hostbased.c]
     strip trailing '.' from hostname when HostbasedUsesNameFromPacketOnly=yes
     report and patch from res AT qoxp.net (bz#1200); ok markus@
 - (dtucker) [openbsd-compat/bsd-cygwin_util.c]  Remove long-unneeded compat
   code, replace with equivalent cygwin library call.  Patch from vinschen
   at redhat.com, ok djm@.
 - (djm) [sshconnect2.c] vis.h isn't available everywhere

20080716
 - OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2008/07/15 02:23:14
     [sftp.1]
     number of pipelined requests is now 64;
     prodded by Iain.Morgan AT nasa.gov
   - djm@cvs.openbsd.org 2008/07/16 11:51:14
     [clientloop.c]
     rename variable first_gc -> last_gc (since it is actually the last
     in the list).
   - djm@cvs.openbsd.org 2008/07/16 11:52:19
     [channels.c]
     this loop index should be automatic, not static

20080714
 - (djm) OpenBSD CVS Sync
   - sthen@cvs.openbsd.org 2008/07/13 21:22:52
     [ssh-keygen.c]
     Change "ssh-keygen -F [host] -l" to not display random art unless
     -v is also specified, making it consistent with the manual and other
     uses of -l.
     ok grunk@
   - djm@cvs.openbsd.org 2008/07/13 22:13:07
     [channels.c]
     use struct sockaddr_storage instead of struct sockaddr for accept(2)
     address argument. from visibilis AT yahoo.com in bz#1485; ok markus@
   - djm@cvs.openbsd.org 2008/07/13 22:16:03