@@ -1,5 +1,13 @@
 20080721
  - (djm) OpenBSD CVS Sync
+   - djm@cvs.openbsd.org 2008/07/23 07:36:55
+     [servconf.c]
+     do not try to print options that have been compile-time disabled
+     in config test mode (sshd -T); report from nix-corp AT esperi.org.uk
+     ok dtucker@
+
+20080721
+ - (djm) OpenBSD CVS Sync
    - jmc@cvs.openbsd.org 2008/07/18 22:51:01
      [sftp-server.8]
      no need for .Pp before or after .Sh;
@@ -4710,4 +4718,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5095 2008/07/21 08:22:25 djm Exp $
+$Id: ChangeLog,v 1.5096 2008/07/23 07:40:04 djm Exp $
